# Pearls-Rust

./: .gitignore  README.md
channel_authentication/: Cargo.toml  build.rs
channel_authentication/rpc/: helloworld.proto
channel_authentication/src/: main.rs
generic_grpc_service/: Cargo.toml  build.rs
generic_grpc_service/proto/: adac_remote.proto
generic_grpc_service/src/: client.rs  server.rs
grpc_service_singleton/: Cargo.toml
grpc_service_singleton/proto/: helloworld.proto
grpc_service_singleton/src/: main.rs  service.rs  singleton.rs
remote_command/: Cargo.toml
remote_command/src/: main.rs
rust-examples-main/cli-grpc-tonic-blocking/: Cargo.toml  Dockerfile
rust-examples-main/cli-grpc-tonic-blocking/src/: main.rs
rust-examples-main/cli-grpc-tonic-blocking/src/remotecli/: client.rs
serial_port/: Cargo.toml
serial_port/src/: main.rs
state-machine/: Cargo.toml
state-machine/src/: main.rs
tic-tac-toe/tic-tac-toe/: Cargo.toml
tonic/examples/src/tls_rustls/: client.rs  server.rs
