[package]
name = "grpc_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the GenericService gRPC server
name = "grpc_service_server"
path = "src/server.rs"

[[bin]] # Bin to run the GenericService gRPC client
name = "grpc_service_client"
path = "src/client.rs"

[dependencies]
futures = "0.3"
state_machine = "0.1.14"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
memmap = "0.7.0"
volatile = "0.4.4"
clap = { version = "4.1.0", features = ["derive"] }
math = "0.10.0"
clap-num = "1.0.0"
if-addrs = "0.10.1"

[build-dependencies]
tonic-build = "0.8"
